--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Hello World, This is Aniket Sanap</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Engineer, Data Engineer, Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Software Engineer,Tech enthusiast"></span></p>
     </div>
   </section><!-- End Hero -->
 
